--- a/enver.html
+++ b/enver.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<tittle>My First Webpage!</tittlre>
-<Style>
+<title>My First Webpage!</title>
+<style>
 body {
 background -color: black;
 }
@@ -26,32 +26,29 @@ border: 1px solid white;
 </style>
 </head>
 <body>
-<hi> Enver secondry</hi>
+<h1> Enver secondry</h1>
 <img
 src="https://www.surreyschools.ca/schools/envercreek/style%20Library/Images/114.j
 pg">
 <table>
 <tr>
-<th>Block>/th>
+<th>Block</th>
 <th>class</th>
 <th>Time</th>
 </tr>
 <tr>
-<td>A>/td>
-<td>Physical Education 11</td
+<td>A></td>
+  <td>Physical Education 11</td>
 
 <td> 8:30-9:50</td>
 </tr>
 <tr>
 <td>C</td>
 <td>Bases11</td>
->td>12:15-1:35</td>
->/tr>
-<tr>
+<td>td>12:15-1:35</td>
+</tr>
 <tr>
 <td>D</td>
 <td>Info Tech 10</td>
 <td>1:40-2-53</td>
 </tr>
-</body>
-</html>
