--- a/Restaurant.html
+++ b/Restaurant.html
@@ -1,1 +1,57 @@
+!DOCTYPE html>
+<html>
+<head>
+<title>Restaurant</title>
+<style>
+body {
+background-color: black;
+}
+*{
+color: white;
+}
+h1 {
+font-family: sans-serif;
+text-align: centre;
+}
+img {
+display: block;
+margin : auto;
+width :40%;
+margin-bottom: 20px;
+}
+table, th, td {
+border: 1px solid white;
+}
+</style>
+</head>
+<body>
+<h1>Ambersaria Swaad</h1>
+<img
+src="https://www.surreyschools.ca/schools/envercreek/style%20Library/Images/114.j
+pg">
+<table>
+<tr>
+<th>Block</th>
+<th>class</th>
+<th>Time</th>
+</tr>
+<tr>
+<td>A></td>
+  <td>Physical Education 11</td>
 
+<td> 8:30-9:50</td>
+</tr>
+<tr>
+<td>C</td>
+<td>Bases11</td>
+<td>12:15-1:35</td>
+</tr>
+<tr>
+<td>D</td>
+<td>Info Tech 10</td>
+<td>1:40-2-53</td>
+</tr>
+  </table>
+  
+  </body>
+</html>
