--- a/Restaurant.html
+++ b/Restaurant.html
@@ -26,30 +26,37 @@ border: 1px solid white;
 </head>
 <body>
 <h1>Ambersaria Swaad</h1>
-<img
-src="https://www.surreyschools.ca/schools/envercreek/style%20Library/Images/114.j
-pg">
+<img src="/images/html5.gif" alt="HTML5 Icon" style="width:128px;height:128px;">
 <table>
 <tr>
-<th>Block</th>
-<th>class</th>
+<th>Monday</th>
+<th>8:00am-11:00pm</th>
 <th>Time</th>
 </tr>
 <tr>
-<td>A></td>
-  <td>Physical Education 11</td>
+<td>Tuesday></td>
+  <td>8:00am-11:00pm</td>
 
-<td> 8:30-9:50</td>
+<td>Wednesday</td>
 </tr>
 <tr>
-<td>C</td>
-<td>Bases11</td>
-<td>12:15-1:35</td>
+<td>8:00am-11:00pm</td>
+<td>Thursay</td>
+<td>10:00am-11:00pm</td>
 </tr>
 <tr>
-<td>D</td>
-<td>Info Tech 10</td>
-<td>1:40-2-53</td>
+<td>Friday</td>
+<td>8:00am-11:00pm</td>
+ </tr>
+<tr>
+<td>Saturday</td>
+<td>8:00am-12:00pm</td>
+  </tr>
+<tr>
+<td>Sunday</td>
+<td>8:00am-12:00pm</td>
+   
+<td></td>
 </tr>
   </table>
   
