--- a/Restaurant.html
+++ b/Restaurant.html
@@ -29,11 +29,12 @@ border: 1px solid white;
 <img src="/images/html5.gif" alt="HTML5 Icon" style="width:128px;height:128px;">
 <table>
 <tr>
-<th>Monday</th>
-<th>8:00am-11:00pm</th>
+  <th>open</th>
 <th>Time</th>
 </tr>
 <tr>
+  <td>Monday</td>
+  <td>8:00am-11:00pm</td>
 <td>Tuesday></td>
   <td>8:00am-11:00pm</td>
 
