--- a/Restaurant.html
+++ b/Restaurant.html
@@ -38,7 +38,7 @@
     <img src="/images/html5.gif" alt="HTML5 Icon" style="width:128px;height:128px;">
     <table>
       <tr>
-        <th>Hours</th>
+        <th>Days</th>
         <th>Times</th>
       </tr>
       <tr>
