--- a/Menu.html
+++ b/Menu.html
@@ -39,12 +39,12 @@
     <table>
       <tr>
         <th>Breakfast</th>
-        <th>Lunch</th>
-        <th>Dinner</th>
+        <th>Item</th>
+        <th>Cost</th>
        
       </tr>
       <tr>
-        <td>Monday</td>
+        <td>Chai tea and Pancakes</td>
         <td>8:00am-11:00pm</td>
       </tr>
       <tr>
