--- a/Menu.html
+++ b/Menu.html
@@ -44,6 +44,7 @@
        
       </tr>
       <tr>
+        <td>one order of</td>
         <td>Chai tea and Pancakes</td>
         <td>$7.95</td>
       </tr>
