--- a/Menu.html
+++ b/Menu.html
@@ -53,28 +53,24 @@
         <td>$7.95</td>
       </tr>
       <tr>
-        <td>Tuesday</td>
-        <td>8:00am-11:00pm</td>
+        <td>Juices</td>
+        <td>available by the glass in regular and large sizes
+Premium Orange (pure squeezed)
+Apple</td>
+        <td>$3.99</td>
       </tr>
       <tr>
-        <td>Wednesday</td>
-        <td>8:00am-11:00pm</td>
+        <td>chai tea and chilli panner</td>
+         <td>a stir fry of deep fried cottage cheese cubes with green capsicum, chillies, onion, garlic and delicious Chinese sauces.</td>
+        <td>$9.95</td>
       </tr>
       <tr>
-        <td>Thursay</td>
-        <td>10:00am-11:00pm</td>
+        <td>harry fishsticks</td>
+        <td>A finely battered fishstick that sadly fell on the floor...yu'd think we'd throw it out but no you get to eat it anyway...enjoy yummy!</td>
+        <td>$gabillion</td>
       </tr>
       <tr>
-        <td>Friday</td>
-        <td>8:00am-11:00pm</td>
-      </tr>
-      <tr>
-        <td>Saturday</td>
-        <td>8:00am-12:00pm</td>
-      </tr>
-      <tr>
-        <td>Sunday</td>
-        <td>8:00am-12:00pm</td>
+      
       </tr>
     </table>
 
