--- a/Menu.html
+++ b/Menu.html
@@ -65,9 +65,9 @@ Apple</td>
         <td>$9.95</td>
       </tr>
       <tr>
-        <td>harry fishsticks</td>
-        <td>A finely battered fishstick that sadly fell on the floor...yu'd think we'd throw it out but no you get to eat it anyway...enjoy yummy!</td>
-        <td>$gabillion</td>
+        <td>Chai tea with Pronte</td>
+        <td>$5:00</td>
+          <td></td>
       </tr>
       <tr>
       
