--- a/Menu.html
+++ b/Menu.html
@@ -66,7 +66,7 @@ Apple</td>
       </tr>
       <tr>
         <td>Lassi with Pronte</td>
-         <td></td>
+         <td>Lassi made with Yogart salt and water Paronte made with</td>
         <td>$7:00</td>
         
          
