--- a/Menu.html
+++ b/Menu.html
@@ -35,7 +35,7 @@
 
   <body>
     <h1>Ambersaria Swaad</h1>
-    <img src="/images/html5.gif" alt="HTML5 Icon" style="width:128px;height:128px;">
+    <img src=";">
     <h1>Breakfast</h1>
     <table>
       <tr>
