--- a/Menu.html
+++ b/Menu.html
@@ -35,7 +35,7 @@
 
   <body>
     <h1>Ambersaria Swaad</h1>
-    <img src="navpreetaulakh.github.io/images/tablemenu;">
+    <img src="navpreetaulakh.github.io/images/tablemenu">
     <h1>Breakfast</h1>
     <table>
       <tr>
