--- a/Menu.html
+++ b/Menu.html
@@ -35,7 +35,7 @@
 
   <body>
     <h1>Ambersaria Swaad</h1>
-    <img src="https://navpreetaulakh.github.io/images/menu2.jpg">
+    <img src="https://raw.githubusercontent.com/navpreetaulakh/navpreetaulakh.github.io/master/images/menu2.jpg">
     <h1>Breakfast</h1>
     <table>
       <tr>
