--- a/Menu.html
+++ b/Menu.html
@@ -20,7 +20,7 @@
       img {
         display: block;
         margin: auto;
-        width: 40%;
+        width: 80;
         margin-bottom: 20px;
       }
       
