--- a/Menu.html
+++ b/Menu.html
@@ -20,7 +20,7 @@
       img {
         display: block;
         margin: auto;
-        width: 60;
+        width: 50%;
         margin-bottom: 20px;
       }
       
