--- a/Menu.html
+++ b/Menu.html
@@ -83,7 +83,7 @@ Apple</td>
       
       <tr>
      
-        <td></td>
+        <td>Rotyi, Dai, Dall and onion</td>
         <td>Stacked with authentic country flavor, our five fluffy buttermilk pancakes are the signature favorite we're famous for. Dig in!
  </td>
         <td>$7.95</td>
