--- a/Restaurant.html
+++ b/Restaurant.html
@@ -23,7 +23,16 @@
         width: 40%;
         margin-bottom: 20px;
       }
-      
+      <nav>
+      <ul>
+      <li><a herf="/menu.html">Menu</a></li>
+      <li><a herf="/Index.html">Index</a></li>
+     <li><a herf="/contact.html">Contact</a></li>
+      <li><a herf="/Location.html">Contact</a></li>
+      </ul.
+      </nav.
+      <div class="container">
+      <div class="blurb">
       table,
       th,
       td {
