--- a/Restaurant.html
+++ b/Restaurant.html
@@ -44,7 +44,7 @@
 
   <body>
     <h1>Ambersaria Swaad</h1>
-    <img src="/images/html5.gif" alt="HTML5 Icon" style="width:128px;height:128px;">
+    <img src="https://raw.githubusercontent.com/navpreetaulakh/navpreetaulakh.github.io/master/images/menu2.jpg">
     <table>
       <tr>
         <th>Days</th>
