--- a/Restaurant.html
+++ b/Restaurant.html
@@ -44,7 +44,7 @@
 
   <body>
     <h1>Ambersaria Swaad</h1>
-    <img src="https://raw.githubusercontent.com/navpreetaulakh/navpreetaulakh.github.io/master/images/menu2.jpg">
+    <img src="https://navpreetaulakh.github.io/images/ambersaria swaad.jpg;>
     <table>
       <tr>
         <th>Days</th>
