--- a/Restaurant.html
+++ b/Restaurant.html
@@ -44,7 +44,7 @@
 
   <body>
     <h1>Ambersaria Swaad</h1>
-    <img src="https://navpreetaulakh.github.io/images/ambersaria swaad.jpg;>
+    <img src="https://github.com/navpreetaulakh/navpreetaulakh.github.io/blob/master/images/ambersaria%20swaad.jpg?raw=true;>
     <table>
       <tr>
         <th>Days</th>
