--- a/Restaurant.html
+++ b/Restaurant.html
@@ -23,16 +23,7 @@
         width: 40%;
         margin-bottom: 20px;
       }
-      <nav>
-      <ul>
-      <li><a herf="/menu.html">Menu</a></li>
-      <li><a herf="/Index.html">Index</a></li>
-     <li><a herf="/contact.html">Contact</a></li>
-      <li><a herf="/Location.html">Contact</a></li>
-      </ul.
-      </nav.
-      <div class="container">
-      <div class="blurb">
+     
       table,
       th,
       td {
@@ -43,6 +34,16 @@
   </head>
 
   <body>
+     <nav>
+      <ul>
+      <li><a herf="/menu.html">Menu</a></li>
+      <li><a herf="/Index.html">Index</a></li>
+     <li><a herf="/contact.html">Contact</a></li>
+      <li><a herf="/Location.html">Contact</a></li>
+       </ul>
+    </nav>
+      <div class="container">
+      <div class="blurb">
     <h1>Ambersaria Swaad</h1>
     <img src="https://github.com/navpreetaulakh/navpreetaulakh.github.io/blob/master/images/ambersaria%20swaad.jpg?raw=true;>
     <table>
