--- a/Restaurant.html
+++ b/Restaurant.html
@@ -39,7 +39,7 @@
       <li><a herf="/menu.html">Menu</a></li>
       <li><a herf="/Index.html">Index</a></li>
      <li><a herf="/contact.html">Contact</a></li>
-      <li><a herf="/Location.html">Contact</a></li>
+      <li><a herf="/Location.html">Location</a></li>
        </ul>
     </nav>
       <div class="container">
