--- a/Menu.html
+++ b/Menu.html
@@ -98,6 +98,9 @@ Apple</td>
         <td>$15.95</td>
         </tr>
       <tr>
+       <td>matar paneer with Royti</td>
+        <td>matar paneer recipe - spiced and creamy curry with peas and .... akki roti recipe with step by step pics – akki roti is one of the staple breakfast in karnatak ..... But please can you tell me </td>
+        <td>$13.95</td>
     </table>
     
 
