--- a/Menu.html
+++ b/Menu.html
@@ -71,7 +71,8 @@ Apple</td>
          <td>Lassi made with Yogart salt and water Paronte made with</td>
         <td>$7:00</td>
          </tr>
-      <tr>
+    </table>
+        
        <h1>Lunch</h1>
     <table>
       <th>Item</th>
