--- a/Restaurant.html
+++ b/Restaurant.html
@@ -45,7 +45,7 @@
       <div class="container">
       <div class="blurb">
     <h1>Ambersaria Swaad</h1>
-    <img src="https://github.com/navpreetaulakh/navpreetaulakh.github.io/blob/master/images/ambersaria%20swaad.jpg?raw=true;>
+    <img src="https://github.com/ambersaria swaad.jpg?raw=true;>
     <table>
       <tr>
         <th>Days</th>
