--- a/Restaurant.html
+++ b/Restaurant.html
@@ -45,7 +45,7 @@
       <div class="container">
       <div class="blurb">
     <h1>Ambersaria Swaad</h1>
-    <img src="navpreetaulakh.github.io/images/https://github.com/ambersaria swaad.jpg?raw=true">
+    <img src="https://raw.githubusercontent.com/navpreetaulakh/navpreetaulakh.github.io/master/images/ambersaria%20swaad.jpg">
     <table>
       <tr>
         <th>Days</th>
