--- a/Menu.html
+++ b/Menu.html
@@ -62,14 +62,15 @@ from the Indian subcontinent.It is mainly eaten with roti, naan, rice, other bre
   < td > matar paneer with Royti < /td> < td > matar paneer recipe - spiced and creamy curry with peas and....akki roti recipe with step by step pics– akki roti is one of the staple breakfast in karnatak.....But please can you tell me < /td> < td > $13.95 < /td> < /tr> < tr >
   < td > < /td> < td > < /td> < td > < /td> < /tr> < tr >
   < /table>
-< h1 > Lunch < /h1> < table >
+< h1 >Dinner < /h1> < table >
   < th > Item < /th> < th > Description < /th> < th > Cost < /th>
 
 
 < tr >
 
-  < td >< /td> < td >  
-  < /td> < td > < /td> < /tr> < tr >
+  < td >Makki de Royti and Saag< /td>
+assortment of boiled lentils with butter, tomatoes, cumin, garam masala and garlic < td >  
+  < /td>$12.50 < td > < /td> < /tr> < tr >
   < td > < /td> < td > 
  < /td> < td >  < /td> < /tr> < tr >
   < td > < /td> < td > < /td> < /tr> < tr >
