--- a/Menu.html
+++ b/Menu.html
@@ -68,7 +68,13 @@ from the Indian subcontinent.It is mainly eaten with roti, naan, rice, other bre
 
 < tr >
 
-
+  < td >Makki de Royti and Saag< /td>
+assortment of boiled lentils with butter, tomatoes, cumin, garam masala and garlic < td >  
+  < /td>$12.50 < td > < /td> < /tr> < tr >
+  < td > < /td> < td > 
+ < /td> < td >  < /td> < /tr> < tr >
+  < td > < /td> < td > < /td> < /tr> < tr >
+  < td > < /td> < td > < /td> < td > < /td> < /tr> < tr >
   < /table>
 
 
