--- a/Menu.html
+++ b/Menu.html
@@ -72,7 +72,7 @@ from the Indian subcontinent.It is mainly eaten with roti, naan, rice, other bre
 assortment of boiled lentils with butter, tomatoes, cumin, garam masala and garlic < td >  
   < /td>$12.50 < td > < /td> < /tr> < tr >
   < td > < /td> < td > 
- < /td> < td >  < /td> < /tr> < tr >
+ < /td>nav is a monkey < td >  < /td> < /tr> < tr >
   < td > < /td> < td > < /td> < /tr> < tr >
   < td > < /td> < td > < /td> < td > < /td> < /tr> < tr >
   < /table>
