--- a/Locations.html
+++ b/Locations.html
@@ -36,7 +36,7 @@
   <body>
     <h1>Ambersaria Swaad</h1>
     <img src=";">
-    <h1>Breakfast</h1>
+    <h1>Locations</h1>
     <table>
       <tr>
        
