--- a/menu.html
+++ b/menu.html
@@ -99,26 +99,28 @@
     <h1>Dinner</h1>
     <table>
       <tr>
-        <th>Item</th>
-        <th>Description</th>
-        <th>Cost</th>
+        <th><PaneerTikka/th>
+        <th>Paneer tikka is an Indian dish made from chunks of paneer marinated in spices and grilled in a tandoor. 
+          It is a vegetarian alternative to chicken tikka and other meat dishes</th>
+        <th>$15.00t</th>
       </tr>
       <tr>
         <td>Makki de Royti and Saag</td>
         <td> assortment of boiled lentils with butter, tomatoes, cumin, garam masala and garlic</td>
         <td>$5.00</td>
       </tr>
-      <td></td>
+      <td>Masala Channa</td>
       <td></td>
       <td></td>
       <tr>
+        <td>Dall Makhni</td>
         <td></td>
-        <td></td>
+         <td>$15.00</td>
       </tr>
       <tr>
+        <td> Chole Bhature</td>
         <td></td>
-        <td></td>
-        <td></td>
+        <td>$10.00</td>
       </tr>
     </table>
   </body>
