--- a/menu.html
+++ b/menu.html
@@ -89,7 +89,7 @@
         <td> $13.95</td>
       </tr>
       <tr>
-        <td></td>
+        <td>Methi Masala</td>
         <td></td>
         <td></td>
       </tr>
@@ -100,21 +100,21 @@
     <table>
       <tr>
         <th><PaneerTikka/th>
-        <th>Paneer tikka is an Indian dish made from chunks of paneer marinated in spices and grilled in a tandoor. 
-          It is a vegetarian alternative to chicken tikka and other meat dishes</th>
+        <th>Paneer tikka is an Indian dish made from chunks of paneer marinated in spices and grilled in a tandoor.</th>
         <th>$15.00t</th>
-      </tr>
+          <tr>
+          </tr>
       <tr>
         <td>Makki de Royti and Saag</td>
         <td> assortment of boiled lentils with butter, tomatoes, cumin, garam masala and garlic</td>
         <td>$5.00</td>
       </tr>
       <td>Masala Channa</td>
-      <td></td>
-      <td></td>
+      <td>Chickpeas cooked in tomatoes, onions, ginger, garlic and tossed with coriander leaves.</td>
+      <td>$15.00</td>
       <tr>
         <td>Dall Makhni</td>
-        <td></td>
+        <td>Chickpeas cooked in tomatoes, onions, ginger, garlic and tossed with coriander leaves.</td>
          <td>$15.00</td>
       </tr>
       <tr>
