--- a/menu.html
+++ b/menu.html
@@ -90,8 +90,9 @@
       </tr>
       <tr>
         <td>Methi Masala</td>
-        <td></td>
-        <td></td>
+        <td>This very tasty, rich curry can be the soul of any meal. 
+          The methi and peas blend in very well with the rich gravy and can be eaten either with a roti or rice dish.</td>
+        <td>$12.95</td>
       </tr>
       <tr>
     </table>
@@ -119,7 +120,7 @@
       </tr>
       <tr>
         <td> Chole Bhature</td>
-        <td></td>
+        <td>a combination of chana masala (spicy chickpeas) and fried bread called bhatoora made from maida flour (soft wheat) </td>
         <td>$10.00</td>
       </tr>
     </table>
