--- a/Locations.html
+++ b/Locations.html
@@ -35,7 +35,7 @@
 
   <body>
     <h1>Ambersaria Swaad</h1>
-    <img src=";">
+    <img src="https://raw.githubusercontent.com/navpreetaulakh/navpreetaulakh.github.io/master/images/diningroom8.jpg;">
     <h1>Locations</h1>
     <table>
       <tr>
