--- a/menu.html
+++ b/menu.html
@@ -35,6 +35,16 @@
   </head>
 
   <body>
+     <nav>
+      <ul>
+      <li><a herf="/menu.html">Menu</a></li>
+      <li><a herf="/Index.html">Index</a></li>
+     <li><a herf="/contact.html">Contact</a></li>
+      <li><a herf="/Location.html">Location</a></li>
+       </ul>
+    </nav>
+      <div class="container">
+      <div class="blurb">
     <h1>Ambersaria Swaad</h1>
     <img src="https://raw.githubusercontent.com/navpreetaulakh/navpreetaulakh.github.io/master/images/menu2.jpg">
     <h1> Breakfast</h1>
