--- a/Locations.html
+++ b/Locations.html
@@ -34,6 +34,16 @@
   </head>
 
   <body>
+     <nav>
+      <ul>
+      <li><a herf="/menu.html">Menu</a></li>
+      <li><a herf="/Index.html">Index</a></li>
+     <li><a herf="/contact.html">Contact</a></li>
+      <li><a herf="/Location.html">Location</a></li>
+       </ul>
+    </nav>
+      <div class="container">
+      <div class="blurb">
     <h1>Ambersaria Swaad</h1>
     <img src="https://raw.githubusercontent.com/navpreetaulakh/navpreetaulakh.github.io/master/images/diningroom8.jpg;">
     <h1>Locations</h1>
